[package]
name = "book_it_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
tokio = "1.8.0"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
bcrypt = "0.10.1"
structopt = "0.3"
dotenv = "0.15"
thiserror = "1.0.30"
chrono = "0.4.19"



[lib]
name = "api"
path = "./src/lib/mod.rs"
